test/files/neg/macro-invalidusage-badtargs-b/Macros_Test_2.scala
object Macros {
  def foo[T](x: Int) = macro Impls.foo
}

object Test extends App {
  import Macros._
  val s: String = foo[String, String](42)
}